# b3-databricks-platform

./: .databricks.official.endpoints.yml  .gitignore  .secrets.databricks.dev.oauth.local.example  .secrets.databricks.example  .secrets.databricks.hml.local.example  .secrets.databricks.hml.oauth.local.example  .secrets.databricks.oauth.example  .secrets.databricks.prd.local.example  MANIFEST.in  README.md  azure-pipelines.yml  bitbucket-pipelines.yml  databricks.yml  pyproject.toml  rename_b3_to_data_platform.sh  requirements-api.txt  requirements-base.txt  requirements-data.txt  requirements-dev-min.txt  requirements-dev.txt  requirements-llm.txt  requirements-ml.txt  requirements-platform.txt  requirements-rag-lab.txt  requirements-runtime.txt  requirements.txt  setup.py
b3_platform/: __init__.py  config_loader.py  context.py  env.py  flags.py  lineage.py  logger.py  naming.py  observability.py  pipeline_registry.py  pipeline_runner.py  secrets.py  utils.py
ci_adapters/: README.md
ci_templates/: README.md
config/: ci_providers.yml  ci_secrets_contract.yml  clientes_ai_pipeline.yml  clientes_ml_pipeline.yml  clientes_pipeline.json  official_environment_contract.yml  official_operational_integration_contract.yml  official_readiness_dev.yml  official_readiness_hml.yml  official_readiness_prd.yml  pdf_rag_eval_questions.yml  pipelines_registry.yml  workloads_registry.yml
data_platform/: __init__.py  config_loader.py  context.py  env.py  flags.py  lineage.py  logger.py  naming.py  observability.py  pipeline_registry.py  pipeline_runner.py  secrets.py  utils.py
docs/: LOCAL_SENSITIVE_FILES_POLICY.md  OFFICIAL_INTEGRATION_RUNBOOK.md  ONBOARDING_PLATFORM_EXAMPLES.md  production_onboarding_checklist.md
sql/: README.md
(+622 files in other folders)
