[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b3-databricks-platform"
version = "0.1.0"
description = "Databricks platform template for data pipelines, MLOps and LLMOps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML==6.0.3",
  "mlflow==3.10.1",
  "pyspark==4.1.1"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["data_platform*", "pipelines*"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.sql"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]
