[build-system]
requires = ["setuptools>=81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b3_databricks_platform"
version = "0.1.0"
description = "B3 Databricks Platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Bruno Cavallini" }
]
dependencies = [
  "PyYAML==6.0.3",]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "mlflow==3.10.1",
  "pyspark==4.1.1"
]

[project.scripts]
run_mlops_drift_cycle = "data_platform.mlops.run_mlops_drift_cycle:main"
run_mlops_postprod_cycle = "data_platform.mlops.run_mlops_postprod_cycle:main"
run_mlops_retraining_cycle = "data_platform.mlops.run_mlops_retraining_cycle:main"
run_mlops_operational_cycle = "data_platform.mlops.run_mlops_operational_cycle:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["data_platform*"]

[tool.setuptools.package-data]
data_platform = ["resources/**/*.yml", "resources/**/*.yaml"]
